Project blade_terminal {
  database_type: 'IndexedDB (Dexie.js)'
}

Enum env_format {
  polygon
  grid
}

Enum env_type {
  offline
  online
  any_offline
  any_online
}

Enum coord_system {
  Cartesian
  Geographic
}

Enum object_category {
  zone
  obstacle
}

Enum object_type {
  empty
  offline
  online
}

Enum algo_param_type {
  Integer
  Decimal
  Boolean
  String
  Enum
}

Enum metric_type {
  "Single-value"
  "Time-series"
}

Enum layer_type {
  Polygon
  Point
  Line
  Grid
  ObjectGroup
}

Enum style_type {
  Boolean
  Integer
  Color
  Pixels
  PointShapeEnum
  PolygonIDShapeEnum
  StrokeStyleEnum
  FillStyleEnum
  OverlapLayoutEnum
  PlacementEnum
  FontWeightEnum
  LineArrowStartEnum
  LineArrowEndEnum
  LineArrowMidEnum
  PointLabelEnum
}

Enum style_group {
  general
  point
  line
  polygon
}

Enum app_enum_group {
  format
  type
  coordsystem
}

Table system.appEnumSetup {
  enumGroup app_enum_group [not null]
  value     varchar        [not null]
  label     varchar        [not null]

  indexes {
    (enumGroup, value) [pk]
    enumGroup          [name: 'idx_appEnumSetup_group']
  }
}

Table system.uiPreference {
  key   varchar [not null]
  value varchar [not null]

  indexes {
    key [pk]
  }
}

Table workspace.environment {
  id            integer      [not null]
  name          varchar      [not null]
  format        env_format   [not null]
  type          env_type     [not null]
  coordSystem   coord_system [not null]
  zoneCount     integer      [not null, default: 0]
  obstacleCount integer      [not null, default: 0]

  indexes {
    id   [pk]
    name [name: 'idx_environments_name']
  }
}

Table workspace.object {
  id            integer         [not null]
  environmentId integer         [not null]
  category      object_category [not null]
  type          object_type     [not null]
  vertexCount   integer         [not null, default: 0]
  area          float           [not null, default: 0]
  vertices      json            [not null]

  indexes {
    (id, environmentId) [pk]
    environmentId       [name: 'idx_objects_environmentId']
  }
}

Table provider.computationProvider {
  id                integer [not null, increment]
  name              varchar [not null]
  url               varchar [not null]
  apiKey            varchar [not null]
  metadataFetchedAt bigint  [null]
  urlAtLastFetch    varchar [null]

  indexes {
    id   [pk]
    name [name: 'idx_computationProviders_name']
  }
}

Table provider.computationProviderAlgorithm {
  id                    integer [not null]
  computationProviderId integer [not null]
  name                  varchar [not null]

  indexes {
    (id, computationProviderId) [pk]
    computationProviderId       [name: 'idx_cpAlgorithms_providerId']
  }
}

Table provider_catalog.computationAlgorithmParameterSetup {
  id                    integer         [not null]
  algorithmId           integer         [not null]
  computationProviderId integer         [not null]
  name                  varchar         [not null]
  paramType             algo_param_type [not null]
  enumValues            json            [not null]
  defaultValue          varchar         [not null, default: '']
  minValue              float           [null]
  section               varchar         [null]
  appHandler            varchar         [null]

  indexes {
    (id, algorithmId, computationProviderId) [pk]
    algorithmId                              [name: 'idx_paramSetup_algorithmId']
    computationProviderId                    [name: 'idx_paramSetup_providerId']
    (algorithmId, computationProviderId)     [name: 'idx_paramSetup_algo_provider']
  }
}

Table provider_catalog.algorithmMetricSetup {
  id                    integer     [not null]
  algorithmId           integer     [not null]
  computationProviderId integer     [not null]
  name                  varchar     [not null]
  type                  metric_type [not null]
  group                 varchar     [null]
  style                 json        [null]

  indexes {
    (id, algorithmId, computationProviderId) [pk]
    algorithmId                              [name: 'idx_metricsSetup_algorithmId']
    computationProviderId                    [name: 'idx_metricsSetup_providerId']
    (algorithmId, computationProviderId)     [name: 'idx_metricsSetup_algo_provider']
  }
}

Table runtime.computationSelection {
  environmentId       integer [not null]
  selectedProviderId  integer [null]
  selectedAlgorithmId integer [null]

  indexes {
    environmentId [pk]
  }
}

Table runtime.computationAlgorithmParameter {
  id            integer [not null]
  algorithmId   integer [not null]
  providerId    integer [not null]
  environmentId integer [not null]
  value         varchar [not null]

  indexes {
    (id, algorithmId, providerId, environmentId) [pk]
    (algorithmId, providerId, environmentId)     [name: 'idx_params_algo_provider_env']
    environmentId                                [name: 'idx_params_environmentId']
    providerId                                   [name: 'idx_params_providerId']
  }
}

Table runtime.computeResult {
  environmentId integer [not null]
  jobId         varchar [not null]
  algorithmId   integer [not null]
  providerId    integer [not null]
  algorithmName varchar [not null]
  completedAt   varchar [not null]
  result        json    [not null]

  indexes {
    environmentId [pk]
  }
}

Table layers.layerSetup {
  id           integer    [not null]
  algorithmId  integer    [not null]
  providerId   integer    [not null]
  key          integer    [not null]
  label        varchar    [not null]
  computeLayer varchar    [null]
  type         layer_type [null]
  placeholder  boolean    [null]

  indexes {
    (id, algorithmId, providerId) [pk]
    algorithmId                   [name: 'idx_layersSetup_algorithmId']
    providerId                    [name: 'idx_layersSetup_providerId']
    key                           [name: 'idx_layersSetup_key']
    (algorithmId, providerId)     [name: 'idx_layersSetup_algo_provider']
  }
}

Table layers.layerSettingSetup {
  id           integer     [not null]
  layerId      integer     [not null]
  algorithmId  integer     [not null]
  providerId   integer     [not null]
  key          varchar     [not null]
  styleType    style_type  [not null]
  styleGroup   style_group [null]
  defaultValue varchar     [null]
  enumValues   json        [null]
  mapping      json        [null]

  indexes {
    (id, layerId, algorithmId, providerId) [pk]
    (layerId, algorithmId, providerId)     [name: 'idx_settingsSetup_layer_algo_provider']
    (algorithmId, providerId)              [name: 'idx_settingsSetup_algo_provider']
    providerId                             [name: 'idx_settingsSetup_providerId']
  }
}

Table layers.layerSetting {
  id            integer     [not null]
  layerId       integer     [not null]
  algorithmId   integer     [not null]
  providerId    integer     [not null]
  environmentId integer     [not null]
  key           varchar     [not null]
  styleType     style_type  [not null]
  styleGroup    style_group [null]
  value         varchar     [not null]

  indexes {
    (id, layerId, algorithmId, providerId, environmentId) [pk]
    (layerId, algorithmId, providerId, environmentId)     [name: 'idx_layerSettings_layer_algo_provider_env']
    (algorithmId, providerId, environmentId)              [name: 'idx_layerSettings_algo_provider_env']
    environmentId                                         [name: 'idx_layerSettings_environmentId']
    providerId                                            [name: 'idx_layerSettings_providerId']
  }
}

Ref: workspace.object.environmentId > workspace.environment.id [delete: cascade]
Ref: runtime.computationSelection.environmentId - workspace.environment.id [delete: cascade]
Ref: runtime.computationAlgorithmParameter.environmentId > workspace.environment.id [delete: cascade]
Ref: runtime.computeResult.environmentId - workspace.environment.id [delete: cascade]
Ref: layers.layerSetting.environmentId > workspace.environment.id [delete: cascade]

Ref: provider.computationProviderAlgorithm.computationProviderId > provider.computationProvider.id [delete: cascade]

Ref: provider_catalog.computationAlgorithmParameterSetup.(algorithmId, computationProviderId) > provider.computationProviderAlgorithm.(id, computationProviderId) [delete: cascade]
Ref: provider_catalog.algorithmMetricSetup.(algorithmId, computationProviderId) > provider.computationProviderAlgorithm.(id, computationProviderId) [delete: cascade]

Ref: runtime.computationAlgorithmParameter.(id, algorithmId, providerId) > provider_catalog.computationAlgorithmParameterSetup.(id, algorithmId, computationProviderId)
Ref: runtime.computationAlgorithmParameter.(algorithmId, providerId) > provider.computationProviderAlgorithm.(id, computationProviderId) [delete: cascade]

Ref: layers.layerSetup.(algorithmId, providerId) > provider.computationProviderAlgorithm.(id, computationProviderId) [delete: cascade]
Ref: layers.layerSettingSetup.(algorithmId, providerId) > provider.computationProviderAlgorithm.(id, computationProviderId) [delete: cascade]
Ref: layers.layerSetting.(algorithmId, providerId) > provider.computationProviderAlgorithm.(id, computationProviderId) [delete: cascade]

Ref: layers.layerSetting.(layerId, algorithmId, providerId) > layers.layerSetup.(key, algorithmId, providerId)
Ref: layers.layerSetting.(id, layerId, algorithmId, providerId) > layers.layerSettingSetup.(id, layerId, algorithmId, providerId)

Ref: layers.layerSettingSetup.(layerId, algorithmId, providerId) > layers.layerSetup.(key, algorithmId, providerId)
